# milkv-duos-rs

./: .gitignore  build_os.sh  default.nix  deploy.sh  live_deploy.sh  milkv-duos.json  test.txt  test2.txt  test4.txt  test5.txt  ttyout.txt  ttyout2.txt  ttyout3.txt
ansi/src/: lib.rs
ansi_test/: Cargo.toml
ansi_test/src/: main.rs
bl/: Cargo.toml  bl.ld  milkv-duos.json  toolchain.toml
bl/.cargo/: config.toml
bl/src/: ansi_.rs  cmd.rs  csr_reg.rs  efuse.rs  entry.rs  gpio.rs  interrupt_vector.rs  io.rs  main.rs  mem.rs  mmio.rs  panic.rs  plic.rs  prelude.rs  timer.rs  uart.rs  vga.rs  vga_.rs  vga_core.rs
deploy/: Cargo.toml
deploy/src/: main.rs
fip/: Cargo.toml
fip/src/: main.rs
fip_testing/: Cargo.toml  all.sh  dis.sh
fip_testing/bl/: bl  bl.S  bl.c  bl.ld  build.sh  uart.c
fip_testing/bl/include/: asm.h  asm_macros.S  csr.h  encoding.h  platform_def.h
fip_testing/make/: ldr2nd.bin.lzma
fip_testing/src/: main.rs
kernel/: Cargo.toml  bl.ld
kernel/.cargo/: config.toml
kernel/src/: entry.rs  interrupt_vector.rs  io.rs  main.rs  panic.rs  prelude.rs  proc.rs  ray.rs  uart_sys.rs  vga.rs
milkv-rs/: Cargo.toml  build.rs
milkv-rs/c/include/: bitwise_ops.h  (+10 more)
milkv-rs/src/: csr.rs  ddr.rs  ddr_.rs  dsi.rs  gpio.rs  interrupt.rs  lib.rs  mem.rs  mmap.rs  mmio.rs  platform.rs  plic.rs  rom_api.rs  rtc.rs  system.rs  timer.rs  uart.rs  watchdog.rs
os/: Cargo.toml  bl.ld
os/.cargo/: config.toml
os/src/: entry.rs  interrupt_vector.rs  io.rs  main.rs  panic.rs  prelude.rs  ray.rs  uart_sys.rs  vga.rs
vga/: Cargo.toml
vga/src/: lib.rs
(+13 files in other folders)
