[package]
name = "bl"
version = "0.1.0"
edition = "2021"


[dependencies]
milkv-rs = { path = "../milkv-rs", features = ["ddr"]}
vga = { path = "../vga" }
ansi = { path = "../ansi" }
embedded-graphics = "*"

[profile.release]
panic = "abort"
opt-level = "z"
lto = "fat"
codegen-units = 1

[profile.dev]
panic = "abort"
